// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`chat/InputPanel visual regression matches snapshot in idle state 1`] = `
<View>
  <View
    className="flex-col gap-3 py-3 px-4 mt-6"
    style={
      [
        {
          "backgroundColor": "rgba(255, 255, 255, 0.3)",
          "borderColor": "rgba(255, 255, 255, 0.4)",
          "borderRadius": 36,
          "borderWidth": 0.5,
          "overflow": "hidden",
        },
        {
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 0.1,
          "shadowRadius": 14,
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "transparent",
          },
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ]
      }
    >
      <ViewManagerAdapter_ExpoBlurView
        blurReductionFactor={4}
        experimentalBlurMethod="none"
        intensity={50}
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        tint="light"
      />
    </View>
    <View
      className="flex-row items-start gap-3 min-h-11"
    >
      <View
        className="border border-background-300 rounded overflow-hidden flex-1 min-h-10 h-auto min-w-0 w-full"
        style={
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
            "height": 48,
            "maxHeight": 112,
            "minHeight": 48,
          }
        }
      >
        <TextInput
          autoCapitalize="sentences"
          autoComplete="off"
          autoCorrect={true}
          blurOnSubmit={false}
          className="p-2 text-typography-900 w-full min-w-0 text-base py-2 min-h-6 flex-none"
          editable={true}
          maxLength={8000}
          multiline={true}
          onBlur={[Function]}
          onChangeText={[Function]}
          onContentSizeChange={[Function]}
          onFocus={[Function]}
          onSubmitEditing={[Function]}
          placeholder="How can I help you today?"
          placeholderTextColor="#737373"
          returnKeyType="default"
          scrollEnabled={false}
          style={
            {
              "color": "#000000",
              "maxHeight": 96,
              "minHeight": 32,
              "minWidth": 0,
              "overflow": "hidden",
              "width": "100%",
            }
          }
          textAlignVertical="top"
          value=""
        />
      </View>
      <View
        className="w-2 h-2 rounded-full self-center bg-success-500 opacity-100"
      />
    </View>
    <View
      className="flex-row items-center justify-between gap-2 flex-nowrap"
    >
      <View
        className="flex-1 flex-row items-center gap-2 min-w-0"
      >
        <View
          accessibilityHint="Opens Skills and Docker dropdown"
          accessibilityLabel="More options"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          className="data-[focus-visible=true]:outline-none data-[focus-visible=true]:ring-indicator-info data-[focus-visible=true]:ring-2 data-[disabled=true]:opacity-40 flex-row items-center gap-1 py-2 px-2 rounded-full min-h-11 active:opacity-90"
          collapsable={false}
          dataSet={
            {
              "active": "false",
              "disabled": "false",
              "focus": "false",
              "focusVisible": "false",
              "hover": "false",
            }
          }
          focusable={true}
          hitSlop={
            {
              "bottom": 12,
              "left": 12,
              "right": 12,
              "top": 12,
            }
          }
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          states={
            {
              "active": false,
              "disabled": false,
              "focus": false,
              "focusVisible": false,
              "hover": false,
            }
          }
          style={
            {
              "backgroundColor": "rgba(255, 255, 255, 0.4)",
            }
          }
        >
          <View />
          <View />
        </View>
        <View
          accessibilityLabel="Select model"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          className="data-[focus-visible=true]:outline-none data-[focus-visible=true]:ring-indicator-info data-[focus-visible=true]:ring-2 data-[disabled=true]:opacity-40 flex-1 flex-row items-center gap-0.5 py-0.5 px-2 rounded-full min-h-11 min-w-0 max-w-36 justify-start active:opacity-90"
          collapsable={false}
          dataSet={
            {
              "active": "false",
              "disabled": "false",
              "focus": "false",
              "focusVisible": "false",
              "hover": "false",
            }
          }
          focusable={true}
          hitSlop={
            {
              "bottom": 12,
              "left": 12,
              "right": 12,
              "top": 12,
            }
          }
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          states={
            {
              "active": false,
              "disabled": false,
              "focus": false,
              "focusVisible": false,
              "hover": false,
            }
          }
          style={
            {
              "backgroundColor": "rgba(255, 255, 255, 0.4)",
            }
          }
        >
          <Text
            className="text-typography-900 text-sm font-bold flex-1 min-w-0"
            ellipsizeMode="tail"
            numberOfLines={2}
            style={
              [
                undefined,
                {
                  "color": "#000000",
                },
              ]
            }
          >
            gpt-5.1-codex-mini
          </Text>
          <View
            className="shrink-0 self-center pl-1"
          >
            <View />
          </View>
        </View>
      </View>
      <View
        className="flex-row items-center gap-2 shrink-0"
      >
        <View
          accessibilityLabel="Open process dashboard"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          className="data-[focus-visible=true]:outline-none data-[focus-visible=true]:ring-indicator-info data-[focus-visible=true]:ring-2 data-[disabled=true]:opacity-40 min-h-11 px-3 border items-center justify-center bg-background-0 border-outline-200 active:bg-background-100 w-11 h-11 rounded-xl"
          collapsable={false}
          dataSet={
            {
              "active": "false",
              "disabled": "false",
              "focus": "false",
              "focusVisible": "false",
              "hover": "false",
            }
          }
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          states={
            {
              "active": false,
              "disabled": false,
              "focus": false,
              "focusVisible": false,
              "hover": false,
            }
          }
        >
          <View
            className="flex-row gap-1 items-center"
          >
            <View />
          </View>
        </View>
        <View
          accessibilityLabel="Open web preview"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          className="data-[focus-visible=true]:outline-none data-[focus-visible=true]:ring-indicator-info data-[focus-visible=true]:ring-2 data-[disabled=true]:opacity-40 min-h-11 px-3 border items-center justify-center bg-background-0 border-outline-200 active:bg-background-100 w-11 h-11 rounded-xl"
          collapsable={false}
          dataSet={
            {
              "active": "false",
              "disabled": "false",
              "focus": "false",
              "focusVisible": "false",
              "hover": "false",
            }
          }
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          states={
            {
              "active": false,
              "disabled": false,
              "focus": false,
              "focusVisible": false,
              "hover": false,
            }
          }
        >
          <View
            className="flex-row gap-1 items-center"
          >
            <View />
          </View>
        </View>
        <View
          accessibilityLabel="Send message"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          className="group/button flex-row items-center justify-center gap-2 px-5 bg-primary-500 w-12 h-12 rounded-full active:opacity-80"
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "backgroundColor": "#111",
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 0.1,
              "shadowRadius": 4,
            }
          }
        >
          <View
            style={
              {
                "color": "#FFFFFF",
              }
            }
          >
            <View />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`chat/InputPanel visual regression matches snapshot in waiting-for-user-input state 1`] = `
<View>
  <View
    className="flex-col gap-3 py-3 px-4 mt-6"
    style={
      [
        {
          "backgroundColor": "rgba(255, 255, 255, 0.3)",
          "borderColor": "rgba(255, 255, 255, 0.4)",
          "borderRadius": 36,
          "borderWidth": 0.5,
          "overflow": "hidden",
        },
        {
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 0.1,
          "shadowRadius": 14,
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "transparent",
          },
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ]
      }
    >
      <ViewManagerAdapter_ExpoBlurView
        blurReductionFactor={4}
        experimentalBlurMethod="none"
        intensity={50}
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        tint="light"
      />
    </View>
    <View
      className="flex-row items-start gap-3 min-h-11"
    >
      <View
        className="border border-background-300 rounded overflow-hidden flex-1 min-h-10 h-auto min-w-0 w-full"
        style={
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
            "height": 48,
            "maxHeight": 112,
            "minHeight": 48,
          }
        }
      >
        <TextInput
          autoCapitalize="sentences"
          autoComplete="off"
          autoCorrect={true}
          blurOnSubmit={false}
          className="p-2 text-typography-900 w-full min-w-0 text-base py-2 min-h-6 flex-none"
          editable={true}
          maxLength={8000}
          multiline={true}
          onBlur={[Function]}
          onChangeText={[Function]}
          onContentSizeChange={[Function]}
          onFocus={[Function]}
          onSubmitEditing={[Function]}
          placeholder="Type response for Claude…"
          placeholderTextColor="#737373"
          returnKeyType="default"
          scrollEnabled={false}
          style={
            {
              "color": "#000000",
              "maxHeight": 96,
              "minHeight": 32,
              "minWidth": 0,
              "overflow": "hidden",
              "width": "100%",
            }
          }
          textAlignVertical="top"
          value=""
        />
      </View>
      <View
        className="w-2 h-2 rounded-full self-center bg-success-500 opacity-100"
      />
    </View>
    <View
      className="flex-row items-center justify-between gap-2 flex-nowrap"
    >
      <View
        className="flex-1 flex-row items-center gap-2 min-w-0"
      >
        <View
          accessibilityHint="Opens Skills and Docker dropdown"
          accessibilityLabel="More options"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          className="data-[focus-visible=true]:outline-none data-[focus-visible=true]:ring-indicator-info data-[focus-visible=true]:ring-2 data-[disabled=true]:opacity-40 flex-row items-center gap-1 py-2 px-2 rounded-full min-h-11 active:opacity-90"
          collapsable={false}
          dataSet={
            {
              "active": "false",
              "disabled": "false",
              "focus": "false",
              "focusVisible": "false",
              "hover": "false",
            }
          }
          focusable={true}
          hitSlop={
            {
              "bottom": 12,
              "left": 12,
              "right": 12,
              "top": 12,
            }
          }
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          states={
            {
              "active": false,
              "disabled": false,
              "focus": false,
              "focusVisible": false,
              "hover": false,
            }
          }
          style={
            {
              "backgroundColor": "rgba(255, 255, 255, 0.4)",
            }
          }
        >
          <View />
          <View />
        </View>
        <View
          accessibilityLabel="Select model"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          className="data-[focus-visible=true]:outline-none data-[focus-visible=true]:ring-indicator-info data-[focus-visible=true]:ring-2 data-[disabled=true]:opacity-40 flex-1 flex-row items-center gap-0.5 py-0.5 px-2 rounded-full min-h-11 min-w-0 max-w-36 justify-start active:opacity-90"
          collapsable={false}
          dataSet={
            {
              "active": "false",
              "disabled": "false",
              "focus": "false",
              "focusVisible": "false",
              "hover": "false",
            }
          }
          focusable={true}
          hitSlop={
            {
              "bottom": 12,
              "left": 12,
              "right": 12,
              "top": 12,
            }
          }
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          states={
            {
              "active": false,
              "disabled": false,
              "focus": false,
              "focusVisible": false,
              "hover": false,
            }
          }
          style={
            {
              "backgroundColor": "rgba(255, 255, 255, 0.4)",
            }
          }
        >
          <Text
            className="text-typography-900 text-sm font-bold flex-1 min-w-0"
            ellipsizeMode="tail"
            numberOfLines={2}
            style={
              [
                undefined,
                {
                  "color": "#000000",
                },
              ]
            }
          >
            gpt-5.1-codex-mini
          </Text>
          <View
            className="shrink-0 self-center pl-1"
          >
            <View />
          </View>
        </View>
      </View>
      <View
        className="flex-row items-center gap-2 shrink-0"
      >
        <View
          accessibilityLabel="Open process dashboard"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          className="data-[focus-visible=true]:outline-none data-[focus-visible=true]:ring-indicator-info data-[focus-visible=true]:ring-2 data-[disabled=true]:opacity-40 min-h-11 px-3 border items-center justify-center bg-background-0 border-outline-200 active:bg-background-100 w-11 h-11 rounded-xl"
          collapsable={false}
          dataSet={
            {
              "active": "false",
              "disabled": "false",
              "focus": "false",
              "focusVisible": "false",
              "hover": "false",
            }
          }
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          states={
            {
              "active": false,
              "disabled": false,
              "focus": false,
              "focusVisible": false,
              "hover": false,
            }
          }
        >
          <View
            className="flex-row gap-1 items-center"
          >
            <View />
          </View>
        </View>
        <View
          accessibilityLabel="Open web preview"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          className="data-[focus-visible=true]:outline-none data-[focus-visible=true]:ring-indicator-info data-[focus-visible=true]:ring-2 data-[disabled=true]:opacity-40 min-h-11 px-3 border items-center justify-center bg-background-0 border-outline-200 active:bg-background-100 w-11 h-11 rounded-xl"
          collapsable={false}
          dataSet={
            {
              "active": "false",
              "disabled": "false",
              "focus": "false",
              "focusVisible": "false",
              "hover": "false",
            }
          }
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          states={
            {
              "active": false,
              "disabled": false,
              "focus": false,
              "focusVisible": false,
              "hover": false,
            }
          }
        >
          <View
            className="flex-row gap-1 items-center"
          >
            <View />
          </View>
        </View>
        <View
          accessibilityLabel="Terminate agent response"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          className="data-[focus-visible=true]:outline-none data-[focus-visible=true]:ring-indicator-info data-[focus-visible=true]:ring-2 data-[disabled=true]:opacity-40 min-h-11 px-3 border items-center justify-center bg-error-500 border-error-500 active:bg-error-600 w-11 h-11 rounded-xl"
          collapsable={false}
          dataSet={
            {
              "active": "false",
              "disabled": "false",
              "focus": "false",
              "focusVisible": "false",
              "hover": "false",
            }
          }
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          states={
            {
              "active": false,
              "disabled": false,
              "focus": false,
              "focusVisible": false,
              "hover": false,
            }
          }
        >
          <View
            className="flex-row gap-1 items-center"
          >
            <View />
          </View>
        </View>
        <View
          accessibilityLabel="Send message"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          className="group/button flex-row items-center justify-center gap-2 px-5 bg-primary-500 w-12 h-12 rounded-full active:opacity-80"
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "backgroundColor": "#111",
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 0.1,
              "shadowRadius": 4,
            }
          }
        >
          <View
            style={
              {
                "color": "#FFFFFF",
              }
            }
          >
            <View />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
